--- a/DataGenerator/trainingdatagenerator.ipynb
+++ b/DataGenerator/trainingdatagenerator.ipynb
@@ -212,7 +212,7 @@
     "    plt.title(monthname)\n",
     "    plt.ylim(ylimstart, ylimend)\n",
     "    plt.figure(figsize=(10,10))\n",
-    "    fig.savefig('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure{}.png'.format(figcnt))\n",
+    "    fig.savefig('/trainingdata/figure{}.png'.format(figcnt))\n",
     "    #plt.show()\n",
     "    plt.clf()"
    ]
@@ -307,10 +307,10 @@
    },
    "outputs": [],
    "source": [
-    "np.savetxt(\"/Users/Ram/Documents/HarvardAssignments/FinalProject/y_trend.txt\", y_trend,fmt='%s')\n",
-    "np.savetxt(\"/Users/Ram/Documents/HarvardAssignments/FinalProject/y_month.txt\", y_month,fmt='%s')\n",
-    "np.savetxt(\"/Users/Ram/Documents/HarvardAssignments/FinalProject/y_start.txt\", y_startindex,fmt='%1.3f')\n",
-    "np.savetxt(\"/Users/Ram/Documents/HarvardAssignments/FinalProject/y_end.txt\", y_endindex,fmt='%1.3f')  "
+    "np.savetxt(\"/trainingdata/y_trend.txt\", y_trend,fmt='%s')\n",
+    "np.savetxt(\"/trainingdata/y_month.txt\", y_month,fmt='%s')\n",
+    "np.savetxt(\"/trainingdata//y_start.txt\", y_startindex,fmt='%1.3f')\n",
+    "np.savetxt(\"/trainingdata//y_end.txt\", y_endindex,fmt='%1.3f')  "
    ]
   }
  ],
