--- a/NeuralNetworkModel.ipynb
+++ b/NeuralNetworkModel.ipynb
@@ -809,7 +809,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1310,7 +1310,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure2444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure2444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1395,7 +1395,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure6444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure6444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1438,7 +1438,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure8444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata//figure8444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1481,7 +1481,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure10444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure10444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1524,7 +1524,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure16444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure16444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
@@ -1567,7 +1567,7 @@
    "source": [
     "X_predict=[]\n",
     "\n",
-    "train_image = image.load_img('/Users/Ram/Documents/HarvardAssignments/FinalProject/figure18444.png', target_size = (32, 32))\n",
+    "train_image = image.load_img('/trainindata/figure18444.png', target_size = (32, 32))\n",
     "train_image = image.img_to_array(train_image)\n",
     "\n",
     "X_predict.append(train_image)\n",
